--- a/html/index.html
+++ b/html/index.html
@@ -25,15 +25,13 @@
 <header>
     <nav class="navbar navbar-expand-md navbar-light bg">
         <div class="container justify-content-between">
-            <a class="d-none d-md-block navbar-brand logo roboto-black py-0 mx-0" href="#">MaxProff</a>
+            <a class="d-none d-md-block navbar-brand logo saira-stencil-one py-0 mx-0" href="#">MaxProff</a>
             <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
                     class="navbar-toggler border-0 fs-1 text-secondary-light" data-bs-target="#navbarSupportedContent"
                     data-bs-toggle="collapse" type="button">
                 <i class="fa fa-bars"></i>
             </button>
-
-            <a class="d-md-none navbar-brand logo roboto-black py-0 px-0" href="#">MaxProff</a>
-
+            <a class="d-md-none navbar-brand logo saira-stencil-one py-0 px-0" href="#">MaxProff</a>
             <div class="collapse navbar-collapse align-items-center justify-content-center"
                  id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0 d-flex justify-content-between">
@@ -73,13 +71,186 @@
 </header>
 
 <main>
-    <section class="container" id="main_slider">
-        <div class="row">
-            <div class="col-8">
-                sada
+    <section class="container mt-3" id="main_slider"
+             style="background-image: linear-gradient(to left, rgba(255,255,255,0%), rgba(255,255,255,100%)), url('../img/main/main-image.png');">
+        <div class="row p-0">
+            <div class="col-12 col-lg-7 col-xl-8">
+                <h1 class="col-md-8 roboto-bold main-title">
+                    РЕМОНТ КВАРТИР
+                    В МОСКВЕ
+                </h1>
+                <h2 class="fs-1 roboto-bold py-2">
+                    от <span
+                        class="p-1 border-3 text-white bg-color-primary roboto-bold"
+                        style="border-radius: 0.3em;font-size: 1.1em">2450</span>
+                    руб/м2
+                </h2>
+                <div class="row pt-5">
+                    <div class="col-6 col-md-4 col-xl-3">
+                        <i class="position-relative p-0 fa fa-circle text-success"
+                           style="filter: opacity(70%);left: 2em; bottom: 1em"></i>
+                        <img alt="" class="position-relative" height="60" src="../img/main/cooperation.png"
+                             style="right: 24px;" width="60">
+                        <p class="roboto-bold" style="font-size: 18px">Оплата по факту приема работ</p>
+                    </div>
+                    <div class="col-6 col-md-4 col-xl-3">
+                        <i class="position-relative p-0 fa fa-circle text-success"
+                           style="filter: opacity(70%);left: 2em; bottom: 1em"></i>
+                        <img alt="" class="position-relative" height="60" src="../img/main/consent.png"
+                             style="right: 24px;" width="60">
+                        <p class="roboto-bold" style="font-size: 18px">Замер и составление сметы БЕСПЛАТНО</p>
+                    </div>
+                </div>
+                <div class="row pt-5">
+                    <div class="col-6 col-md-4 col-xl-3">
+                        <i class="position-relative p-0 fa fa-circle text-success"
+                           style="filter: opacity(70%);left: 2em; bottom: 1em"></i>
+                        <img alt="" class="position-relative" height="60" src="../img/main/builder.png"
+                             style="right: 24px;" width="60">
+                        <p class="roboto-bold" style="font-size: 18px">Выезд сметчика </p>
+                    </div>
+                    <div class="col-6 col-md-4 col-xl-3">
+                        <i class="position-relative p-0 fa fa-circle text-success"
+                           style="filter: opacity(70%);left: 2em; bottom: 1em"></i>
+                        <img alt="" class="position-relative" height="60" src="../img/main/guarantee.png"
+                             style="right: 24px;" width="60">
+                        <p class="roboto-bold" style="font-size: 18px">Гарантия 3 года</p>
+                    </div>
+                </div>
             </div>
-            <div class="col-4">
-                dsa
+            <div class="col">
+                <form class="row justify-content-center bg-light">
+                    <div class="row p-0  pb-3 px-lg-3 py-3 py-lg-3 m-0 ">
+                        <h4 class="text-right my-2 roboto-bold">Рассчитайте стоимость ремонта</h4>
+                    </div>
+                    <div class="row p-0 px-lg-3 m-0 py-3 py-lg-3 border-bottom">
+                        <label class="form-label roboto-medium text-opacity-25">
+                            Вид ремонта:
+                        </label>
+                        <div class="col-6">
+                            <div class="w-auto">
+                                <label class="form-check-label">
+                                    <input checked class="form-check-input" name="kind_of_work"
+                                           type="radio"
+                                           value="1">
+                                    Косметический
+                                </label>
+                            </div>
+                            <div class="w-auto">
+                                <label class="form-check-label">
+                                    <input checked class="form-check-input" name="kind_of_work"
+                                           type="radio"
+                                           value="2">
+                                    Под ключ
+                                </label>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="w-auto">
+                                <label class="form-check-label">
+                                    <input checked class="form-check-input" name="kind_of_work" type="radio"
+                                           value="3">
+                                    Капитальный
+                                </label>
+                            </div>
+                            <div class="w-auto">
+                                <label class="form-check-label">
+                                    <input checked class="form-check-input" name="kind_of_work" type="radio"
+                                           value="4">
+                                    Дизайнерский
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row p-0 px-lg-3 m-0 py-3 py-lg-3  border-bottom justify-content-between">
+                        <label class="form-label roboto-medium text-opacity-25 mt-2">
+                            Тип вашей недвижимости:
+                        </label>
+                        <div class="col m-0">
+                            <label class="form-check-label">
+                                <input checked class="form-check-input" name="type_of_estate"
+                                       type="radio"
+                                       value="1">
+                                Новостройка
+                            </label>
+                        </div>
+                        <div class="col m-0">
+                            <label class="form-check-label">
+                                <input checked class="form-check-input" name="type_of_estate"
+                                       type="radio"
+                                       value="2">
+                                Под ключ
+                            </label>
+                        </div>
+                    </div>
+                    <div class="row p-0 px-lg-3 m-0 py-3 py-lg-3 border-bottom">
+                        <label class="form-label roboto-medium text-opacity-25">
+                            Количество комнат
+                        </label>
+                        <div class="w-auto">
+                            <label class="form-check-label">
+                                <input checked class="form-check-input" name="rooms"
+                                       type="radio"
+                                       value="1">
+                                1
+                            </label>
+                        </div>
+                        <div class="w-auto">
+                            <label class="form-check-label">
+                                <input checked class="form-check-input" name="rooms"
+                                       type="radio"
+                                       value="1">
+                                2
+                            </label>
+                        </div>
+                        <div class="w-auto">
+                            <label class="form-check-label">
+                                <input checked class="form-check-input" name="rooms"
+                                       type="radio"
+                                       value="1">
+                                3
+                            </label>
+                        </div>
+                        <div class="w-auto">
+                            <label class="form-check-label">
+                                <input checked class="form-check-input" name="rooms"
+                                       type="radio"
+                                       value="1">
+                                4
+                            </label>
+                        </div>
+                    </div>
+                    <div class="row p-0 px-lg-3 m-0 py-3 py-lg-3 border-bottom">
+                        <label class="form-label roboto-medium" for="square">Площадь, м2:</label>
+                        <input class="px-2 form-range" id="square" type="range"> 35
+                    </div>
+                    <div class="row p-0 px-lg-3 m-0 py-3 py-lg-3 bg-info bg-opacity-10 border-bottom justify-content-between">
+                        <div class="col">
+                            <p class="m-0 text-color-secondary roboto-regular">Срок ремонта:</p>
+                            <span class="p-0 text-color-secondary roboto-bold">до 34 дней</span>
+                        </div>
+                        <div class="col">
+                            <p class="m-0 text-color-secondary roboto-regular">Скидка составит:</p>
+                            <span class="p-0 text-color-secondary roboto-bold">23765 руб</span>
+                        </div>
+                    </div>
+                    <div class="row p-0 px-lg-3 m-0 py-3 py-lg-3 border-bottom justify-content-between">
+                        <label class="form-label roboto-medium" for="phone">Введите номер телефона:</label>
+                        <div class="col-12 col-xl-7 py-3 py-md-2">
+                            <input class="form-control" id="phone"
+                                   name="phone"
+                                   pattern="\+7\s?[\(]{0,1}9[0-9]{2}[\)]{0,1}\s?\d{3}[-]{0,1}\d{2}[-]{0,1}\d{2}"
+                                   placeholder="+7 (XXX) XXX-XX-XX"
+                                   type="tel">
+                        </div>
+                        <div class="col py-3 py-md-2">
+                            <button class="btn w-100 py-lg-2 btn-primary"
+                                    type="submit">
+                                Заказать
+                            </button>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </section>
