--- a/html/index.html
+++ b/html/index.html
@@ -73,7 +73,7 @@
 <main>
     <section class="container mt-3" id="main_slider"
              style="background-image: linear-gradient(to left, rgba(255,255,255,0%), rgba(255,255,255,100%)), url('../img/main/main-image.png');">
-        <div class="row p-0">
+        <div class="row p-0 pb-3">
             <div class="col-12 col-lg-7 col-xl-8">
                 <h1 class="col-md-8 roboto-bold main-title">
                     РЕМОНТ КВАРТИР
@@ -222,7 +222,12 @@
                     </div>
                     <div class="row p-0 px-lg-3 m-0 py-3 py-lg-3 border-bottom">
                         <label class="form-label roboto-medium" for="square">Площадь, м2:</label>
-                        <input class="px-2 form-range" id="square" type="range"> 35
+                        <div class="col-12 px-2 p-0">
+                            <div class="row px-2">
+                                <input class="col form-range" id="square" type="range">
+                                <p class="col-1">35</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="row p-0 px-lg-3 m-0 py-3 py-lg-3 bg-info bg-opacity-10 border-bottom justify-content-between">
                         <div class="col">
