--- a/html/index.html
+++ b/html/index.html
@@ -1133,20 +1133,214 @@
         </div>
     </section>
 
-    <section class="container mt-5">
+    <section class="container mt-5 p-2" id="banner"
+             style="background-image: linear-gradient(to left, rgba(255,255,255,45%), rgba(255,255,255,50%)), url('../img/main/main-image.png'); background-size: cover;background-repeat: no-repeat">
+        <h2 class="roboto-bold pt-5 mb-3 text-center text-md-start">Только лучшие поставщики</h2>
 
+        <h6 class="roboto-regular text-center text-md-start">
+            В нашей работе мы используем самые качественные и проверенные годами материалы
+        </h6>
+        <div class="row pb-5">
+            <div class="col-12 col-md order-last order-md-first">
+                <div class="row justify-content-center align-content-center align-items-center   p-4 m-0 bg-white">
+                    <div class="col-12 col-md row p-3 m-0">
+                        <p class="col-12 col-md roboto-regular text-center text-md-end m-0 p-0 pb-3 fs-6">Получите
+                            бесплатный
+                            сертификат
+                            на
+                            чистовые
+                            материалы
+                            номиналом:</p>
+                        <p class="roboto-regular text-center text-md-start col-12 col-md-auto m-0 mx-3 p-0 ">
+                            <span class="text-color-secondary roboto-black bg-color-secondary px-2 py-2 my-3"
+                                  style="border-radius: 0.3em 0.3em 0.3em 0.3em;font-size: 2rem">30 000</span>
+                            руб.
+                        </p>
+                    </div>
+                    <div class="row m-0 p-0  justify-content-center">
+                        <button class="col-12 col-md-6 mx-auto roboto-black btn btn-primary" style="font-size: 20px">
+                            Оставить заявку
+                        </button>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-12 col-md">
+                <div class="row">
+                    <div class="col-6 col-lg-4"><img alt="" class="img-fluid" src="../img/brands/knauf.png"></div>
+                    <div class="col-6 col-lg-4"><img alt="" class="img-fluid" src="../img/brands/knauf.png"></div>
+                    <div class="col-6 col-lg-4"><img alt="" class="img-fluid" src="../img/brands/knauf.png"></div>
+                    <div class="col-6 col-lg-4"><img alt="" class="img-fluid" src="../img/brands/knauf.png"></div>
+                    <div class="col-6 col-lg-4"><img alt="" class="img-fluid" src="../img/brands/knauf.png"></div>
+                    <div class="col-6 col-lg-4"><img alt="" class="img-fluid" src="../img/brands/knauf.png"></div>
+                </div>
+            </div>
+        </div>
     </section>
+
+    <div class="container my-4 py-3">
+        <h2 class="roboto-bold pt-5 mb-3 text-center">Вопросы и ответы</h2>
+
+        <h5 class="roboto-regular text-center pb-3">
+            Знаем, о чем вы думаете прямо сейчас
+        </h5>
+        <div class="faq">
+            <div class="faq-item fs-5">
+                <div class="row py-2 m-0 faq-question">
+                    <i class="fs-2 fa fa-plus col-auto"></i>
+                    <p class="col m-0 p-0">Кто закупает материал?</p>
+                </div>
+                <div class="fs-5 faq-answer">
+                    <div class="row m-0 ">
+                        <div class="col-1 clearfix m-0 p-0"></div>
+                        <p class="col-11 m-0 p-0">
+                            dasdaskjdjasdjasdjas
+                            ODasdjas
+                            djasi
+                            djasidjas
+                            iodjasi
+                            djs
+                            djs
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="faq-item fs-5">
+                <div class="row py-2 m-0 faq-question">
+                    <i class="fs-2 fa fa-plus col-auto"></i>
+                    <p class="col m-0 p-0">Кто закупает материал?</p>
+                </div>
+                <div class="fs-5 faq-answer">
+                    <div class="row m-0 ">
+                        <div class="col-1 clearfix m-0 p-0"></div>
+                        <p class="col-11 m-0 p-0">
+                            dasdaskjdjasdjasdjas
+                            ODasdjas
+                            djasi
+                            djasidjas
+                            iodjasi
+                            djs
+                            djs
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="faq-item fs-5">
+                <div class="row py-2 m-0 faq-question">
+                    <i class="fs-2 fa fa-plus col-auto"></i>
+                    <p class="col m-0 p-0">Кто закупает материал?</p>
+                </div>
+                <div class="fs-5 faq-answer">
+                    <div class="row m-0 ">
+                        <div class="col-1 clearfix m-0 p-0"></div>
+                        <p class="col-11 m-0 p-0">
+                            dasdaskjdjasdjasdjas
+                            ODasdjas
+                            djasi
+                            djasidjas
+                            iodjasi
+                            djs
+                            djs
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="faq-item fs-5">
+                <div class="row py-2 m-0 faq-question">
+                    <i class="fs-2 fa fa-plus col-auto"></i>
+                    <p class="col m-0 p-0">Кто закупает материал?</p>
+                </div>
+                <div class="fs-5 faq-answer">
+                    <div class="row m-0 ">
+                        <div class="col-1 clearfix m-0 p-0"></div>
+                        <p class="col-11 m-0 p-0">
+                            dasdaskjdjasdjasdjas
+                            ODasdjas
+                            djasi
+                            djasidjas
+                            iodjasi
+                            djs
+                            djs
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
 
 </main>
 
-<footer>
-
+<footer class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3">
+                <h5 class="footer-title">MaxProff</h5>
+                <p>Любая форма оплаты</p>
+                <div class="payment-icons">
+                    <img alt="Visa" src="https://via.placeholder.com/24">
+                    <img alt="MasterCard" src="https://via.placeholder.com/24">
+                    <img alt="American Express" src="https://via.placeholder.com/24">
+                </div>
+            </div>
+            <div class="col-md-3">
+                <h5 class="footer-title">НАШИ УСЛУГИ</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#">Квартиры</a></li>
+                    <li><a href="#">Коттеджи</a></li>
+                    <li><a href="#">Таунхаусы</a></li>
+                    <li><a href="#">Офисы</a></li>
+                    <li><a href="#">Инженерные системы</a></li>
+                    <li><a href="#">География работ</a></li>
+                </ul>
+            </div>
+            <div class="col-md-3">
+                <h5 class="footer-title">НАШИ УСЛУГИ</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#">ПОРТФОЛИО</a></li>
+                    <li><a href="#">СТОИМОСТЬ</a></li>
+                    <li><a href="#">АКЦИИ</a></li>
+                    <li><a href="#">О КОМПАНИИ</a></li>
+                    <li><a href="#">СТАТЬИ</a></li>
+                    <li><a href="#">КОНТАКТЫ</a></li>
+                </ul>
+            </div>
+            <div class="col-md-3">
+                <h5 class="footer-title">КОНТАКТЫ</h5>
+                <p><a href="tel:+72332222222">+7 (233) 222-22-22</a><br>08:00 - 22:00, без выходных</p>
+                <p><a href="#">Заказать звонок</a></p>
+                <p><a href="mailto:info@example.com">Электронная почта @</a></p>
+                <p><a href="#">Адрес</a></p>
+            </div>
+        </div>
+        <div class="row mt-4 bottom-bar">
+            <div class="col-md-6">
+                <p>&copy; 2021 "MaxProff" <a href="#">Правовая информация</a></p>
+            </div>
+            <div class="col-md-6 text-right social-icons">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-youtube"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-telegram"></i></a>
+                <a href="#"><i class="fab fa-vk"></i></a>
+                <a href="#"><i class="fab fa-odnoklassniki"></i></a>
+            </div>
+        </div>
+        <div class="row mt-2">
+            <div class="col-md-12 text-center">
+                <p>Сайт не является публичной офертой и носит информационный характер</p>
+                <a href="#">Карта сайта</a>
+            </div>
+        </div>
+    </div>
 </footer>
 
 <script crossorigin="anonymous"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+
 
 <script src="../js/script.js" type="module">
 
