--- a/html/index.html
+++ b/html/index.html
@@ -33,9 +33,7 @@
     <nav class="navbar navbar-expand-md navbar-light bg">
         <div class="container justify-content-between">
             <a class="d-none d-md-block navbar-brand logo saira-stencil-one py-0 mx-0" href="#">MaxProff</a>
-            <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
-                    class="navbar-toggler border-0 fs-1 text-secondary-light" data-bs-target="#navbarSupportedContent"
-                    data-bs-toggle="collapse" type="button">
+            <button class="d-block d-md-none btn btn-primary" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" type="button">
                 <i class="fa fa-bars"></i>
             </button>
             <a class="d-md-none navbar-brand logo saira-stencil-one py-0 px-0" href="#">MaxProff</a>
@@ -75,10 +73,59 @@
             <btn class="d-xl-none btn btn-primary" href="#"><i class="fa fa-phone"></i></btn>
         </div>
     </nav>
+
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+        <div class="offcanvas-header">
+            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body px-5">
+            <button class="btn btn-primary col-12">Заказать звонок</button>
+            <button class="btn btn-outline-primary my-2 col-12">Заказать звонок</button>
+            <button class="btn btn-outline-primary col-12">Заказать звонок</button>
+            <ul class="sidebar nav navbar-nav">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" href="#">SERVICES</a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Delivery</a></li>
+                        <li>
+                            <a class="dropdown-item" href="#">Event Planning</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Цены</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Портфолио</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Акции</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Преимущества</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Блог</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Контакты</a>
+                </li>
+            </ul>
+            <div class="row p-0 m-0 my-2 my-md-3">
+                <div class="row">
+                    <i class="col-auto fs-2 fa fa-phone p-0"></i>
+                    <a class="col-auto p-0 roboto-bold nav-link text-black" href="tel:+72332222222">+7 (233) 222-22-22</a>
+                </div>
+                <p class="p-0 m-0">08:00 - 22:00,
+                    без
+                    выходных <br>
+                </p>
+            </div>
+        </div>
+    </div>
 </header>
 
 <main class="container">
-
     <section class="container mt-3" id="main_slider"
              style="background-image: linear-gradient(to left, rgba(255,255,255,0%), rgba(255,255,255,100%)), url('../img/main/main-image.png'); background-size: cover;background-repeat: no-repeat">
         <div class="row p-0 pb-3">
@@ -1278,6 +1325,10 @@
             </div>
         </div>
     </div>
+    <!-- Back to top button -->
+    <button  type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-danger btn-floating btn-lg" id="btn-back-to-top">
+        <i class="fas fa-arrow-up"></i>
+    </button>
 
 </main>
 
