--- a/html/index.html
+++ b/html/index.html
@@ -77,6 +77,52 @@
             <button class="d-xl-none btn btn-primary" href="#"><i class="fa fa-phone"></i></button>
         </div>
     </nav>
+    <nav class="d-none d-md-block navbar navbar-expand-md navbar-light secondary-nav container border-color-primary"
+         style="border: solid; border-left: 0;border-right: 0;">
+        <!--        <div class="container justify-content-between">-->
+        <ul class=" navbar-nav mb-2 mb-lg-0 row justify-content-around">
+            <li class="nav-item dropdown col">
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">Ремонт
+                    квартир</a>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">1</a></li>
+                    <li>
+                        <a class="dropdown-item" href="#">2</a>
+                    </li>
+                </ul>
+            </li>
+            <li class="nav-item dropdown col">
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">Дизайн
+                    интерьера</a>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">1</a></li>
+                    <li>
+                        <a class="dropdown-item" href="#">2</a>
+                    </li>
+                </ul>
+            </li>
+            <li class="nav-item dropdown col">
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">Ремонт
+                    комнат</a>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">1</a></li>
+                    <li>
+                        <a class="dropdown-item" href="#">2</a>
+                    </li>
+                </ul>
+            </li>
+            <li class="nav-item col">
+                <a class="nav-link" data-bs-toggle="dropdown" href="#" role="button">Дома и
+                    коттеджи</a>
+            </li>
+            <li class="nav-item col">
+                <a class="nav-link" data-bs-toggle="dropdown" href="#" role="button">
+                    Прочие услуги
+                </a>
+            </li>
+        </ul>
+        <!--        </div>-->
+    </nav>
 
     <div aria-labelledby="offcanvasRightLabel" class="offcanvas offcanvas-end" id="offcanvasRight" tabindex="-1">
         <div class="offcanvas-header">
@@ -88,14 +134,45 @@
             <button class="btn btn-outline-primary col-12">Заказать звонок</button>
             <ul class="sidebar nav navbar-nav">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">SERVICES</a>
+                    <a class="nav-link dropdown-toggle roboto-bold" data-bs-toggle="dropdown" href="#" role="button">Ремонт
+                        квартир</a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Delivery</a></li>
+                        <li><a class="dropdown-item" href="#">1</a></li>
                         <li>
-                            <a class="dropdown-item" href="#">Event Planning</a>
+                            <a class="dropdown-item" href="#">2</a>
                         </li>
                     </ul>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle roboto-bold" data-bs-toggle="dropdown" href="#" role="button">Дизайн
+                        интерьера</a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">1</a></li>
+                        <li>
+                            <a class="dropdown-item" href="#">2</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle roboto-bold" data-bs-toggle="dropdown" href="#" role="button">Ремонт
+                        комнат</a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">1</a></li>
+                        <li>
+                            <a class="dropdown-item" href="#">2</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link roboto-bold" data-bs-toggle="dropdown" href="#" role="button">Дома и
+                        коттеджи</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link roboto-bold" data-bs-toggle="dropdown" href="#" role="button">
+                        Прочие услуги
+                    </a>
+                </li>
+
                 <li class="nav-item">
                     <a class="nav-link" href="#">Цены</a>
                 </li>
@@ -1324,6 +1401,28 @@
             </div>
         </div>
     </div>
+    <section class="container mb-5">
+        <h2 class="roboto-bold text-center pb-3">
+            Где мы находимся
+        </h2>
+        <h4 class="roboto-regular text-center pb-3">
+            Гродненский государственный
+            политехнический колледж
+        </h4>
+        <div style="width: 100%;position:relative;overflow:hidden;"><a
+                href="https://yandex.by/maps/org/grodnenskiy_gosudarstvenny_politekhnicheskiy_kolledzh/1113746286/?utm_medium=mapframe&utm_source=maps"
+                style="color:#eee;font-size:12px;position:absolute;top:0px;">Гродненский государственный
+            политехнический колледж</a><a
+                href="https://yandex.by/maps/10274/grodno/category/college/184106236/?utm_medium=mapframe&utm_source=maps"
+                style="color:#eee;font-size:12px;position:absolute;top:14px;">Колледж в Гродно</a>
+            <iframe allowfullscreen="true"
+                    frameborder="1" height="500"
+                    src="https://yandex.by/map-widget/v1/?ll=23.827979%2C53.667208&mode=search&oid=1113746286&ol=biz&rl=23.830221%2C53.667728&rlt=area&sctx=ZAAAAAgBEAAaKAoSCdXqq6sCoTtAEQ2qDU5E80pAEhIJO%2BP74lKV9z8RXwzlRLsK4D8iBgABAgMEBSgKOABApKYNSAFqAnVhnQHNzEw9oAEAqAEAvQH%2FFkzuwgEF7taJkwSCAgRVVUdSigIAkgIAmgIMZGVza3RvcC1tYXBz&sll=23.827979%2C53.667208&sspn=0.007703%2C0.002635&text=UUGR&utm_source=main_stripe_big&z=18"
+                    style="position:relative;"
+                    width="1920"></iframe>
+        </div>
+    </section>
+
     <!-- Back to top button -->
     <button class="btn btn-danger btn-floating btn-lg" data-mdb-button-init data-mdb-ripple-init id="btn-back-to-top"
             type="button">
